--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ header h1 {
 }
 header p{
     text-align: center;
-    font-size: 1.5em;
+    font-size: 2vw;
     font-weight: normal;
 }
 header a{
@@ -50,7 +50,7 @@ header a:hover{
     padding-top: 70px;
     padding-left: 40px;
     font-family: 'Patrick Hand', cursive;
-    font-size: 4.3em;
+    font-size: 4.3vw;
 
 }
 #paragraph2{
@@ -69,7 +69,7 @@ header a:hover{
     width: 45vw;
     height: 100vh;
     font-family: 'Patrick Hand', cursive;
-    font-size: 4.3em;
+    font-size: 4.3vw;
     color: white;
     background-color: rgba(0, 0, 0, 0.582);
 }
@@ -79,7 +79,7 @@ header a:hover{
     padding-top: 70px;
     padding-left: 40px;
     font-family: 'Patrick Hand', cursive;
-    font-size: 4.3em; 
+    font-size: 4.3vw; 
 }
 
 #paragraph4{
@@ -99,7 +99,7 @@ margin: 30px 30px 10px 30px;
 width: 45vw;
 height: 90vh;
 font-family: 'Patrick Hand', cursive;
-font-size: 4.3em;
+font-size: 4.3vw;
 color: white;
 background-color: rgba(0, 0, 0, 0.582);
 }
@@ -110,7 +110,7 @@ background-color: rgba(0, 0, 0, 0.582);
     padding-top: 70px;
     padding-left: 40px;
     font-family: 'Patrick Hand', cursive;
-    font-size: 4.3em; 
+    font-size: 4.3vw; 
     padding-bottom: 300px;
 }
 
